// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexpattern_datasource utils cloneLayer should clone layer with renewing ids 1`] = `
Object {
  "a": Object {
    "columnOrder": Array [
      "899ee4b6-3147-4d45-94bf-ea9c02e55d28",
      "ae62cfc8-faa5-4096-a30c-f92ac59922a0",
    ],
    "columns": Object {
      "899ee4b6-3147-4d45-94bf-ea9c02e55d28": Object {
        "params": Object {
          "orderBy": Object {
            "columnId": "ae62cfc8-faa5-4096-a30c-f92ac59922a0",
            "type": "column",
          },
          "orderDirection": "desc",
        },
      },
      "ae62cfc8-faa5-4096-a30c-f92ac59922a0": Object {
        "params": Object {
          "emptyAsNull": true,
        },
      },
    },
    "incompleteColumns": Object {},
    "indexPatternId": "ff959d40-b880-11e8-a6d9-e546fe2bba5f",
  },
  "b": Object {
    "columnOrder": Array [
      "899ee4b6-3147-4d45-94bf-ea9c02e55d28C",
      "ae62cfc8-faa5-4096-a30c-f92ac59922a0C",
    ],
    "columns": Object {
      "899ee4b6-3147-4d45-94bf-ea9c02e55d28C": Object {
        "params": Object {
          "orderBy": Object {
            "columnId": "ae62cfc8-faa5-4096-a30c-f92ac59922a0C",
            "type": "column",
          },
          "orderDirection": "desc",
        },
      },
      "ae62cfc8-faa5-4096-a30c-f92ac59922a0C": Object {
        "params": Object {
          "emptyAsNull": true,
        },
      },
    },
    "incompleteColumns": Object {},
    "indexPatternId": "ff959d40-b880-11e8-a6d9-e546fe2bba5f",
  },
}
`;

exports[`indexpattern_datasource utils getPrecisionErrorWarningMessages if has precision error and sorting is by count ascending, show fix action and switch to rare terms 1`] = `
Object {
  "displayLocations": Array [
    Object {
      "id": "toolbar",
    },
    Object {
      "dimensionId": "col1",
      "id": "dimensionButton",
    },
  ],
  "fixableInEditor": true,
  "longMessage": "",
  "severity": "warning",
  "shortMessage": "This may be approximate depending on how the data is indexed. For more precise results, sort by rarity.",
  "uniqueId": "precision_error_asc_count_precision",
}
`;

exports[`indexpattern_datasource utils getPrecisionErrorWarningMessages precision error warning with accuracy mode should other suggestions if accuracy mode already enabled 1`] = `
Object {
  "displayLocations": Array [
    Object {
      "id": "toolbar",
    },
    Object {
      "dimensionId": "col1",
      "id": "dimensionButton",
    },
  ],
  "fixableInEditor": true,
  "longMessage": "",
  "severity": "warning",
  "shortMessage": "This might be an approximation. For more precise results, use Filters or increase the number of Top Values.",
  "uniqueId": "layer_settings_accuracy_mode_enabled",
}
`;

exports[`indexpattern_datasource utils getPrecisionErrorWarningMessages precision error warning with accuracy mode should show accuracy mode prompt if currently disabled 1`] = `
Object {
  "displayLocations": Array [
    Object {
      "id": "toolbar",
    },
    Object {
      "dimensionId": "col1",
      "id": "dimensionButton",
    },
  ],
  "fixableInEditor": true,
  "longMessage": "",
  "severity": "warning",
  "shortMessage": "This might be an approximation. For more precise results, you can enable accuracy mode, but it increases the load on the Elasticsearch cluster.",
  "uniqueId": "layer_settings_accuracy_mode_disabled",
}
`;
